edited out more stuff

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,7 @@
 /* -------------------------------------------
 
-Name: 		Arter
+Name: 		Telvin 
 Version:  1.0
-Author:		Nazar Miller (millerDigitalDesign)
-Portfolio:  https://themeforest.net/user/millerdigitaldesign/portfolio?ref=MillerDigitalDesign
-
-p.s. I am available for Freelance hire (UI design, web development). mail: miller.themes@gmail.com
-
-------------------------------------------- */
 
 /*--------------------------------------------
 
